<resources>
    <!-- Encounter calculator tab -->
    <string name="app_name">Dungeon Master Studio</string>
    <string name="app_short_name">DM Studio</string>
    <string name="under_construction">This page is under construction.</string>
    <string name="calculate">Calculate challenge</string>
    <string name="results">Encounter results</string>
    <string name="party_members">Party members</string>
    <string name="enemy_group">Enemy group</string>
    <string name="player_label">Player #</string>
    <string name="monster_label">Monster #</string>
    
    <string name="incomplete_form_title">Continue calculation?</string>
    <string name="incomplete_form_message">
        You seem to have not selected the level/challenge of all characters.
        Do you wish to continue anyway?
    </string>

    <string-array name="player_level">
    	<item>Select level</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="enemy_cr">
    	<item>Select challenge</item>
        <item>0</item>
        <item>1/8</item>
        <item>1/4</item>
        <item>1/2</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>30</item>
    </string-array>

    <!-- Campaign notes tab -->
    <string name="upload">Upload</string>
    <string name="add">Add new</string>

    <string name="character_header">Non Playable Characters</string>
    <string name="location_header">Locations</string>
    <string name="item_header">Items</string>
    <string name="note_header">Riddles and notes</string>

    <string name="character_form_title">New NPC</string>
    <string name="location_form_title">New location</string>
    <string name="item_form_title">New item</string>
    <string name="note_form_title">New riddle or note</string>

    <string name="character_info">NPC info</string>
    <string name="location_info">Location info</string>
    <string name="item_info">Item info</string>
    <string name="note_info">Note info</string>

    <string name="confirm_deletion_title">Confirm delete</string>
    <string name="confirm_deletion_message">
        This entity will be permanently deleted. Do you wish to continue?
    </string>

    <string-array name="character_race">
        <item>Select race</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Halfling</item>
        <item>Human</item>
        <item>Dragonborn</item>
        <item>Gnome</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Tiefling</item>
    </string-array>

    <string-array name="character_role">
        <item>Select role</item>
        <item>Acolyte</item>
        <item>Archmage</item>
        <item>Assassin</item>
        <item>Bandit</item>
        <item>Bandit Captain</item>
        <item>Berserker</item>
        <item>Commoner</item>
        <item>Cultist</item>
        <item>Cult Fanatic</item>
        <item>Druid</item>
        <item>Gladiator</item>
        <item>Guard</item>
        <item>Knight</item>
        <item>Mage</item>
        <item>Noble</item>
        <item>Priest</item>
        <item>Scout</item>
        <item>Spy</item>
        <item>Thug</item>
        <item>Tribal Warrior</item>
        <item>Veteran</item>
    </string-array>

    <string-array name="item_type">
        <item>Select type</item>
        <item>Armor</item>
        <item>Potion</item>
        <item>Ring</item>
        <item>Rod</item>
        <item>Scroll</item>
        <item>Staff</item>
        <item>Wand</item>
        <item>Wondrous item</item>
    </string-array>

    <string-array name="item_rarity">
        <item>Select rarity</item>
        <item>Common</item>
        <item>Uncommon</item>
        <item>Rare</item>
        <item>Very rare</item>
        <item>Legendary</item>
    </string-array>

    <string name="label_name">Name: </string>
    <string name="label_description">Description: </string>
    <string name="label_img">Image: </string>
    <string name="label_character_race">Race: </string>
    <string name="label_character_role">Role: </string>
    <string name="label_character_gold">Gold pieces: </string>
    <string name="label_location_address">Address: </string>
    <string name="label_location_places">Places: </string>
    <string name="label_location_people">People: </string>
    <string name="label_item_type">Type: </string>
    <string name="label_item_rarity">Rarity: </string>
    <string name="label_item_attuned">Attunement: </string>
    <string name="label_note_condition">Condition: </string>
    <string name="label_note_action">Action: </string>

    <string name="hint_character_name">Character name</string>
    <string name="hint_character_gold">Gold carried</string>
    <string name="hint_character_description">General info, appearance, etc</string>
    <string name="hint_location_name">Location name</string>
    <string name="hint_location_address">Where it is located</string>
    <string name="hint_location_description">General info, history, etc</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_item_description">General info, magic properties, etc</string>
    <string name="hint_note_name">Riddle or note name</string>
    <string name="hint_note_description">General info, meaning, author, etc</string>
    <string name="hint_note_condition">When/how is it found</string>
    <string name="hint_note_action">What happens after</string>

    <string name="attunement_requeired">Required</string>
    <string name="attunement_not_requeired">Not required</string>
</resources>
