<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingBottom="2dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="2dip"
                    android:text="@string/character_header" />

                <ImageButton
                    android:id="@+id/add_character"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@android:drawable/ic_input_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/character_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingBottom="2dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="2dip"
                    android:text="@string/location_header" />

                <ImageButton
                    android:id="@+id/add_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@android:drawable/ic_input_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingBottom="2dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="2dip"
                    android:text="@string/item_header" />

                <ImageButton
                    android:id="@+id/add_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@android:drawable/ic_input_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingBottom="2dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="2dip"
                    android:text="@string/note_header" />

                <ImageButton
                    android:id="@+id/add_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@android:drawable/ic_input_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/note_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>